# trump-alert

./: .gitignore  LICENSE  README.md  SKILL.md  mcp_server.py  pyproject.toml  requirements.txt
.github/workflows/: daily-alert.yml
scripts/: event_dedup.py  fetch_last30days.py  fetch_news.py  fetch_posts.py  fetch_prices.py  fetch_speeches.py  run_daily.py  setup_config.py
trump_alert/: __init__.py  _api.py
